--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "to_do_list",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,11 @@
   "bugs": {
     "url": "https://github.com/NataliaAraujo2/to_do_list/issues"
   },
-  "homepage": "https://github.com/NataliaAraujo2/to_do_list#readme"
+  "homepage": "https://github.com/NataliaAraujo2/to_do_list#readme",
+  "description": "",
+  "dependencies": {
+    "express": "^4.18.1",
+    "knex": "^2.3.0",
+    "mysql2": "^2.3.3"
+  }
 }
