Modifica docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
   databaseServer:
     image: mysql:latest
     environment:
-      MYSQL_ROOT_PASSWORD : a1b2c34a5e,
+      MYSQL_ROOT_PASSWORD : a1b2c34a5e
     networks:
       - myNetwork
 
