--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,10 @@ services:
   application:
     build: .
     environment:
-      DATABASE_HOST:
-      DATABASE_USER:
+      DATABASE_HOST: database
+      DATABASE_USER: natykay
       DATABASE_PASS: a1b2c3
-      DATABASE_NAME:
+      DATABASE_NAME: ToDoList
     networks:
       - myNetwork
 
