--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,6 @@ services:
     depends_on:
       - database
     restart: on-failure
-    command: sh -c "npm run knex && npm run start && knex migrate:up && node index.js"
+    command: sh -c "npm install knex && npm run start && knex migrate:up && node index.js"
 
   
